--- a/GoPass/index.html
+++ b/GoPass/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="js/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main-section.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -17,31 +18,32 @@
 
 <body>
     <header>
-        <nav class="nav-left">
-            <li class="nav-icon">
-                <ul><a href=""><img src="img/logoGoPass.png" alt=""></a></ul>
-            </li>
-        </nav>
-        <nav class="nav-rigth">
-            <li class="nav-social">
-                <ul><a href=""><i class="fab fa-facebook-f fa-2x" style="color:green"></i></a></ul>
-                <ul><a href=""><i class="fab fa-instagram fa-2x" style="color:green"></i></a></ul>
-                <ul><a href=""><i class="fab fa-youtube fa-2x" style="color:green"></i></a></ul>
-            </li>
-
-            <li class="nav-info">
-                <ul><a href="">¿Que es GoPass?</a></ul>
-                <ul><a href="">Nuestros Servicios</a></ul>
-                <ul><a href="">Contáctanos</a></ul>
-                <ul><a href=""><img src="img/tag.png" alt=""></a></ul>
-            </li>
+        <div class="header-logo">
+            <a href="#"><img src="img/logoGoPass.png" alt=""></a>
+        </div>
+        <nav>
+            <ul class="nav-redes">
+                <li><a href="#"><i class="fab fa-facebook-f fa-2x"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube fa-2x"></i></a></li>
+            </ul>
+            <ul class="nav-menu">
+                <li><a href="#">¿Que es GoPass?</a></li>
+                <li><a href="#">Nuestros Servicios</a></li>
+                <li><a href="#">Contactanos</a></li>
+                <li><a href="#"><img src="img/tag.png" alt=""></a></li>
+            </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <p>El MEDIO DE PAGO AUTOMATICO SIN FILAS, SIN EFECTIVO</p>
+        <section class="main-section">
+            <div class="home">
+                <p>EL MEDIO DE PAGO AUTOMATICO SIN FILAS, SIN EFECTIVO.</p>
+            </div>
+            
         </section>
     </main>
+    
 </body>
 
 </html>
