--- a/GoPass/index.html
+++ b/GoPass/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="js/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/main-section.css">
+    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/info.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -35,15 +37,54 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="main-section">
-            <div class="home">
-                <p>EL MEDIO DE PAGO AUTOMATICO SIN FILAS, SIN EFECTIVO.</p>
+
+    <section class="main-section">
+        <p>EL MEDIO DE PAGO AUTOMATICO SIN FILAS, SIN EFECTIVO.</p>
+    </section>
+
+    <section class="product">
+        <div class="img-product">
+            <img src="img/productoGoPass.png" alt="">
+        </div>
+        <div class="descriptionProduct">
+            <p>
+                GoPass, un ecosistema de movilidad diseñado especialmente para ti, podras pagara electronicamente los
+                peajes,
+                pagar el parqueadero de centro comerciales, actualizar tu SOAT y pagar el combustible de tu carro,
+                <br>
+                <strong>
+                    !Todo con un solo
+                    <span>TAG</span>
+                    !
+                </strong>
+            </p>
+
+        </div>
+        <div class="buttonTag"> 
+            <a href="#"><img src="img/AddTag.png" alt=""></a>
+        </div> 
+    </section>
+
+    <section class="info-product">
+        <div class="info">
+            <div class="info-title"> 
+                <p>EL TAG QUE NO SOLO TE FUNCIONA PARA PAGAR LOS PEAJES</p>
             </div>
-            
-        </section>
-    </main>
-    
+            <div class="info-description">
+                <p>En GoPass tienes un ecosistema de servicios a tu disposicion, olvidate de los papelitos cuando tenga que pagar el parqueadero del centro comercial,
+                    Ingresa y sol sin ningun problema, paga desde tu telefono el combustible de tu vehiculo o actualiza tu soat con un solo toque
+                </p>
+            </div>
+        </div>
+
+        <div class="info-img">
+            <img src="img/fotoDescripcion.png" width="50%" alt="">
+        </div>
+    </section>
+
+
+
+
 </body>
 
 </html>
